# cax-scripts

./: .gitignore  CAX_scan_procedure.md  Makefile  README.md  beam_walk.ipynb  cax_pv_monitor.py  cax_scripts_tests.ipynb  caxmirrorscan-cli  ellipse_info.ipynb  example_tx_analysis.ipynb  imageproc_studies.ipynb  img_tests.ipynb  pyproject.toml  pyproject.toml.disabled  scan_analysis.ipynb  scan_read_hdf5.ipynb  setup.py
analyses/: caustic.ipynb  mirror.ipynb  slit.ipynb
aux/: convert_hdf5.py  inspect_hdf5.py
caxscripts/: __init__.py  beamprofile.py  config.py  h5file.py  image_statistics.py  libbeamanalysis.py  motormov.py  read_file.py  scan.py  scananalysis.py  tests.ipynb  utils.py
examples/: basic_caustic_scan_devices.ipynb  basic_script.ipynb  basic_square_scan_devices.ipynb  debug_device.ipynb  h5_rw.ipynb  opt_square_pos_20250717.txt  run_caustic.ipynb  square_scan_1806_1.ipynb  test_device.ipynb
scripts/: basic_caustic_scan_devices.ipynb  basic_script.ipynb  basic_square_scan_devices.ipynb  beamprofile.py  getimage.py  h5file.py  initial_state_20250829-133208.txt  initial_state_20250902-102542.txt  initial_state_20250903-100111.txt  initial_state_ry_20250903-150050.txt  initial_state_ry_scan_20250724.txt  mirror_Ry_scan.ipynb  mirror_Ry_scan_01.ipynb  mirror_Ry_scan_02.ipynb  mirror_Ry_scan_03.ipynb  mirror_Tx_scan.ipynb  read_file.py  read_files.py  scan_by_table.ipynb  scan_caustic.ipynb  scan_lens.ipynb  scan_photocollector.ipynb  scan_ry.ipynb  scan_slit.ipynb  scan_y2.ipynb  script.ipynb  slit_mov_dev.ipynb  slits_mov.ipynb
(+6 files in other folders)
