[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cax-scripts"
version = "0.1.0"
description = "Scripts for beam analysis"
authors = [
    { name = "Jefferson Vieira", email = "jefferson.vieira@lnls.br" },
    { name = "Arnaldo Filho", email = "arnaldo.filho@lnls.br" },
    { name = "Juventino Fonseca", email = "juventino.fonseca@lnls.br" },
    { name = "Sergio Lordano", email = "sergio.lordano@lnls.br" },
]
dependencies = []

[tool.setuptools.packages.find]
where = ["caxscripts"]
